--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -2265,7 +2265,7 @@ MeasurementToolMetadata:
     Contains two fields: `"Description"` and `"TermURL"`.
     `"Description"` is a free text description of the measurement tool.
     `"TermURL"` is a URL to an entity in an ontology corresponding to this tool.
-    RECOMMENDED by `AdditionalValidation` of `"Phenotype"` in `dataset_description.json`.
+    RECOMMENDED by `AdditionalValidation` containing `"Phenotype"` in `dataset_description.json`.
   type: object
   properties:
     TermURL:
