--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -166,8 +166,7 @@ depth__probes:
   description: |
     Physical depth of the probe, for example, '0.3'.
     This dimension should be omitted or set to 0 for two-dimensional (shank-type) probes.
-    This dimension corresponds to the z’axis of the Euler transformation defined by
-    yaw, pitch, and roll rotations values.
+    This dimension corresponds to the z-axis of the probe's local coordinate frame.
   type: number
 detector__channels:
   name: detector
@@ -359,6 +358,14 @@ hardware_filters:
     - type: string
       enum:
         - n/a
+height__probe:
+  name: height
+  display_name: Probe height
+  description: |
+    Physical height of the probe, for example, '0.3'.
+    This dimension should be omitted or set to 0 for one-dimensional (linear) probes.
+    This dimension corresponds to the y-axis of the probe's local coordinate frame.
+  type: number
 hemisphere:
   name: hemisphere
   display_name: Electrode hemisphere
@@ -1144,8 +1151,7 @@ width__probes:
   display_name: Width
   description: |
     Physical width of the probe, for example, '5'.
-    This dimension corresponds to the x’axis of the Euler transformation defined by
-    alpha, beta and gamma rotations values.
+    This dimension corresponds to the x-axis of the probe's local coordinate frame.
   type: number
 x:
   name: x
