Fixed minor typo failing schema validation

--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -358,7 +358,7 @@ hardware_filters:
     - type: string
       enum:
         - n/a
-height__probe:
+height__probes:
   name: height
   display_name: Probe height
   description: |
