Limit screen requirements to gaze-on-screen

--- a/src/schema/rules/checks/eyetrack.yaml
+++ b/src/schema/rules/checks/eyetrack.yaml
@@ -10,6 +10,7 @@ EyetrackingStimulusPresentation:
     - suffix == 'physio'
     - extension == '.tsv.gz'
     - sidecar.PhysioType == 'eyetrack'
+    - sidecar.SampleCoordinateSystem == 'gaze-on-screen'
   checks:
     - '"ScreenDistance" in associations.events.sidecar.StimulusPresentation'
     - '"ScreenOrigin" in associations.events.sidecar.StimulusPresentation'
