add Preamplification and Gain as recommended fields to emg.json

--- a/src/schema/rules/sidecars/emg.yaml
+++ b/src/schema/rules/sidecars/emg.yaml
@@ -72,6 +72,8 @@ EMGRecommended:
     EMGPlacementSchemeDescription: recommended
     EpochLength: recommended
     HardwareFilters: recommended
+    Preamplification: recommended
+    Gain: recommended
     InterelectrodeDistance: recommended
     RecordingDuration: recommended
     RecordingType: recommended
