--- a/src/schema/objects/enums.yaml
+++ b/src/schema/objects/enums.yaml
@@ -1452,6 +1452,16 @@ microvascular:
   display_name: microvascular
   description: |
     The origin of a tissue: microvascular
+PhysioTypeGeneric:
+  value: generic
+  display_name: Generic Physiological Recording
+  description: |
+    Unspecified physiological recording.
+PhysioTypeEyetrack:
+  value: eyetrack
+  display_name: Eye-tracking recording
+  description: |
+    A specific physiological recording type: eye-tracking.
 PhysioTypeEnriched:
   value: enriched
   display_name: Enriched Physiological Recording
