--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -1290,7 +1290,7 @@ ProvEntities:
           `MD5`; `SHA1`; `SHA-224` ; `SHA-256` ; `SHA-384` ; `SHA-512` ;
           `SHA3-224`; `SHA3-256`; `SHA3-384`; `SHA3-512`; `BLAKE2B-256`; `BLAKE3-256`;
           `SHAKE128`; `SHAKE256`. Otherwise, key MAY be an arbitrary label.
-          The corresponding value is the checksum as computed by the function.
+          The corresponding value is the checksum as computed by the function identified by the key.
         type: object
       AtLocation:
         name: AtLocation
